7110586: C2 generates incorrect results

Exact limit of empty loop calculated incorrectly.

Reviewed-by: iveresov, never